charts/all/travelops/travel-control/templates/destinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: control
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true, Validate=false  
    argocd.argoproj.io/sync-wave: "5"
spec:
  host: control.travel-control.svc.cluster.local
  subsets:
    - labels:
        version: v1
      name: v1
